[Sprint 12] Внести исправления после GitActions